--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="landing">
       <div class="landingWrapper">
         <div class="landingL">
-          <h1>Kason Nguyen.</h1>
+          <h1>Khoi Nguyen.</h1>
           <p>
             Hello, my name is Khoi Nguyen. I am a UI/UX<br />
             Designer &amp; <span class="blue">Product Designer.</span>
