--- a/index.html
+++ b/index.html
@@ -91,5 +91,14 @@
       </div>
       <img src="./img/project3.png" alt="project3" class="workImg" />
     </div>
+
+    <div class="footer">
+      <div class="footerIcons">
+        <a href="#"><img src="./img/BehanceL.png" alt="hehance logo"/></a>
+        <a href="#"><img src="./img/linkedinL.png" alt="linkedin logo"/></a>
+        <a href="#"><img src="./img/dribbbleL.png" alt="dribbble logo"/></a>
+      </div>
+      <div class="email">Email: nkason333@gmail.com</div>
+    </div>
   </body>
 </html>
