--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <h1>Khoi Nguyen.</h1>
           <p>
             Hello, my name is Khoi Nguyen. I am a UI/UX<br />
-            Designer &amp; <span class="blue">Product Designer.</span>
+            Designer &amp;
+            <span class="blue"><a href="#workList">Product Designer</a>.</span>
           </p>
           <ul>
             <li><p>UI/UX</p></li>
@@ -61,7 +62,7 @@
       </div>
     </section>
 
-    <div class="workList">
+    <div class="workList" id="workList">
       <h2>My Works</h2>
     </div>
 
