project pics updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="#"><h5>View Project</h5></a>
         <div class="underline"></div>
       </div>
-      <img src="./img/project1new.png" alt="project1" class="workImg" />
+      <img src="/img/project1verynew.png" alt="project1" class="workImg" />
     </div>
 
     <div class="work2 clearfix">
@@ -90,12 +90,12 @@
         <a href="#"><h5>View Project</h5></a>
         <div class="underline"></div>
       </div>
-      <img src="./img/project3.png" alt="project3" class="workImg" />
+      <img src="./img/project3again.png" alt="project3" class="workImg" />
     </div>
 
     <div class="footer">
       <div class="footerIcons">
-        <a href="#"><img src="./img/BehanceL.png" alt="hehance logo"/></a>
+        <a href="#"><img src="./img/BehanceL.png" alt="behance logo"/></a>
         <a href="#"><img src="./img/linkedinL.png" alt="linkedin logo"/></a>
         <a href="#"><img src="./img/dribbbleL.png" alt="dribbble logo"/></a>
       </div>
