--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </ul>
         </div>
         <div class="landingR">
-          <img src="./img/khoinewpic.png" alt="Khoi Nguyen pic" width="300px" />
+          <img src="./img/khoiAvatar.png" alt="Khoi Nguyen pic" width="300px" />
         </div>
       </div>
       <img src="img/Scroll.png" alt="scroll down" class="scroll" />
