--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="work clearfix">
       <div class="workText">
         <h1>Paws 4 Healing</h1>
-        <a href="#"><h5>View Project</h5></a>
+        <a href="#paws.html.html"><h5>View Project</h5></a>
         <div class="underline"></div>
       </div>
       <img src="/img/project1verynew.png" alt="project1" class="workImg" />
